--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article class="content">
     <div class="post">{{ content }}</div>
     <hr />
-    {% include share-page.html %}
+<!--     {% include share-page.html %} -->
 </article>
 <hr />
 {% assign hasSimilar = '' %}
@@ -46,14 +46,14 @@ layout: default
 </div>
 
 
-<div class="disqus-comments">
+<!-- <div class="disqus-comments">
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* <![CDATA[ */
 
         var disqus_shortname = "{{ site.disqus_shortname }}";
         var disqus_identifier = "{{ site.url }}_{{ page.title }}";
-        var disqus_title = "{{ page.title }}";
+        var disqus_title = "{{ page.title }}"; -->
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
