--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article class="content">
     <div class="post">{{ content }}</div>
     <hr />
-<!--     {% include share-page.html %} -->
+
 </article>
 <hr />
 {% assign hasSimilar = '' %}
@@ -53,7 +53,7 @@ layout: default
 
         var disqus_shortname = "{{ site.disqus_shortname }}";
         var disqus_identifier = "{{ site.url }}_{{ page.title }}";
-        var disqus_title = "{{ page.title }}"; -->
+        var disqus_title = "{{ page.title }}";
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
@@ -63,5 +63,5 @@ layout: default
         })();
     /* ]]> */
     </script>
-</div>
+</div> -->
 </div>
